# ChangeLog for dev-cpp/poslib
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/poslib/Attic/ChangeLog,v 1.19 2006/10/22 20:25:34 kugelfang Exp $

  22 Oct 2006; Danny van Dyk <kugelfang@gentoo.org> poslib-1.0.6.ebuild:
  Marked stable on amd64.

  21 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org> poslib-1.0.6.ebuild:
  ppc stable

  08 Oct 2006; Andrej Kacian <ticho@gentoo.org> poslib-1.0.6.ebuild:
  Stable on x86, bug #148441.

  21 Sep 2006; MATSUU Takuto <matsuu@gentoo.org> poslib-1.0.6.ebuild:
  Fixed HOMEPAGE.

  20 Feb 2006; Mark Loeser <halcy0n@gentoo.org> poslib-1.0.5.ebuild,
  poslib-1.0.6.ebuild:
  Remove DEPEND on virtual/libc

  19 Sep 2005; Mark Loeser <halcy0n@gentoo.org> metadata.xml:
  Adding to cpp herd.

  31 Dec 2004; MATSUU Takuto <matsuu@gentoo.org> poslib-1.0.5.ebuild:
  Marked as stable.

*poslib-1.0.6 (31 Dec 2004)

  31 Dec 2004; MATSUU Takuto <matsuu@gentoo.org> -poslib-1.0.2.ebuild,
  +poslib-1.0.6.ebuild:
  Version bumped.
  Removed old versions.

  14 Dec 2004; MATSUU Takuto <matsuu@gentoo.org> poslib-1.0.4.ebuild:
  Marked as stable.

*poslib-1.0.5 (10 Aug 2004)

  10 Aug 2004; MATSUU Takuto <matsuu@gentoo.org> +poslib-1.0.5.ebuild:
  Version bumped. Bug 59627.

  29 Jun 2004; Aron Griffis <agriffis@gentoo.org> poslib-1.0.2.ebuild,
  poslib-1.0.4.ebuild:
  glibc -> libc

  23 Apr 2004; David Holm <dholm@gentoo.org> poslib-1.0.4.ebuild:
  Added to ~ppc.

*poslib-1.0.4 (23 Apr 2004)

  23 Apr 2004; <matsuu@gentoo.org> -poslib-1.0.1.ebuild, poslib-1.0.2.ebuild,
  +poslib-1.0.4.ebuild:
  Version bumped.

  12 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> poslib-1.0.2.ebuild:
  Mark stable on amd64.

*poslib-1.0.2 (02 Mar 2004)

  02 Mar 2004; <matsuu@gentoo.org> poslib-1.0.2.ebuild:
  Version bumped. Bug # 40194.
  Added ~amd64 to KEYWORDS.

*poslib-1.0.1 (02 Nov 2003)

  02 Nov 2003; MATSUU Takuto <matsuu@gentoo.org> poslib-1.0.1.ebuild:
  Initial import. #26268
