@@ -1,11 +1,11 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/poslib/Attic/poslib-1.0.6.ebuild,v 1.7 2006/10/22 20:25:34 kugelfang Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/poslib/Attic/poslib-1.0.6.ebuild,v 1.8 2008/04/04 01:19:21 halcy0n Exp $
 
 inherit flag-o-matic
 
 DESCRIPTION="A library for creating C++ programs using the Domain Name System"
-HOMEPAGE="http://www.posadis.org/poslib"
+HOMEPAGE="http://posadis.sourceforge.net/"
 SRC_URI="mirror://sourceforge/posadis/${P}.tar.gz"
 
 LICENSE="GPL-2"
@@ -25,6 +25,6 @@ src_compile() {
 }
 
 src_install() {
-	make DESTDIR=${D} install || die
+	make DESTDIR="${D}" install || die
 	dodoc AUTHORS ChangeLog INSTALL NEWS README TODO
 }
